src/components/Nav/Navbar.css
nav {
    height: 80px;
    width: 100%;
    min-height: 50px;
    background: rgb(53, 181, 255);
    display: grid;
    grid-template-columns: repeat(16, 1fr);
    grid-template-rows: 1fr;
    grid-gap: 0.5%;
    top: 0;
    z-index: 99;
    position: fixed;
    align-items: center;
}

nav.transparent{
    background: rgba(21, 161, 220, 0);
}

.nav-links{
    float: left;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-row: 1;
    grid-column: 4 / span 6;
    list-style: none;
    align-items: center;
    text-align: center;
    height: 100%;
}

.nav-links > *{
    height: 70%;
    display: grid;
    color: white;
    text-decoration: none;
    font-size: 1.5vw;
    border-right: solid;
    border-color: rgba(167, 200, 230, 0.71);
    border-width: 1px;
    align-items: center;
}


.nav-links >*:hover{
    /*color: black;*/
}

#nav-brand{
    display: grid;
    grid-column: 2 / span 2;
    /* background-color: black; */
    width: 100%;
    height: 3vw;
    background-image: url("../../img/Logo_aligned.png");
    background-size: contain;
    background-repeat: no-repeat;
}

@media screen and (max-width: 768px){
    .nav-links > *{
        border-bottom: solid;
        border-color: white;
        border-right: none;
        height: 100%;
        width: 100%;
        font-size: 4vw;
        color: #0277d7;
        /*grid-auto-flow: row;*/
    }


    .line{
        width: 30px;
        height: 3px;
        background: #0277d7;
        margin: 5px;
    }

    nav{
        display: grid;
        grid-auto-flow: row;
        position: fixed;
        top: 0;
        z-index: 99;
        background-color: rgba(209, 255, 255, 0);
    }

    #nav-brand{
        grid-column: 5 / span 8;
        z-index: 99;
        height: 75%;
        width: 100%;
        background-position: center;
    }

    .hamburger{
        position: absolute;
        cursor: pointer;
        right: 5%;
        top: 50%;
        transform: translate(-5%, -50%);
        z-index: 5;
    }

    .nav-links{
        grid-auto-flow: row;
        grid-template-columns: 1fr;
        position: fixed;
        background: rgba(209, 255, 255, 0.91);
        height: 100vh;
        width: 100%;
        flex-direction: column;
        clip-path: circle(0px at 90% -10%);
        -webkit-clip-path: circle(0px at 90% -10%);
        transition: all 1s ease-out;
        z-index: 4;
    }

    .nav-links >*:hover{
        background-color: rgba(166, 202, 209, 0.91);
        transition: .20s;
    }

    .nav-links.open{
        clip-path: circle(1500px at 90% -10%);
        -webkit-clip-path: circle(1500px at 90% -10%);
    }

}

